@@ -1,8 +1,8 @@
 # --
 # Kernel/System/MailAccount/POP3.pm - lib for pop3 accounts
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: POP3.pm,v 1.7 2009/11/18 15:13:03 mn Exp $
+# $Id: POP3.pm,v 1.8 2010/01/13 17:02:10 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -17,7 +17,7 @@ use Net::POP3;
 use Kernel::System::PostMaster;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.7 $) [1];
+$VERSION = qw($Revision: 1.8 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -72,6 +72,17 @@ sub Connect {
     );
 }
 
+sub _Fetch {
+    my ( $Self, %Param ) = @_;
+
+    # fetch again if still messages on the account
+    for ( 1 .. 200 ) {
+        return if !$Self->_Fetch(%Param);
+        last   if !$Self->{Reconnect};
+    }
+    return 1;
+}
+
 sub Fetch {
     my ( $Self, %Param ) = @_;
 
@@ -101,8 +112,9 @@ sub Fetch {
 
     my $Timeout      = 60;
     my $FetchCounter = 0;
-    my $Reconnect    = 0;
     my $AuthType     = 'POP3';
+
+    $Self->{Reconnect} = 0;
 
     my %Connect = $Self->Connect(
         Host     => $Param{Host},
@@ -112,8 +124,6 @@ sub Fetch {
         Debug    => $Debug
     );
 
-    my $PopObject;
-    my $NOM;
     if ( !$Connect{Successful} ) {
         $Self->{LogObject}->Log(
             Priority => 'error',
@@ -121,18 +131,21 @@ sub Fetch {
         );
         return;
     }
-    else {
-        $PopObject = $Connect{PopObject};
-        $NOM       = $Connect{NOM};
-    }
+    my $PopObject = $Connect{PopObject};
+    my $NOM       = $Connect{NOM};
 
     # fetch messages
-    if ( $NOM > 0 ) {
+    if ( !$NOM ) {
+        if ($CMD) {
+            print "$AuthType: No messages ($Param{Login}/$Param{Host})\n";
+        }
+    }
+    else {
         for my $Messageno ( sort { $a <=> $b } keys %{ $PopObject->list() } ) {
 
             # check if reconnect is needed
             if ( ( $FetchCounter + 1 ) > $MaxPopEmailSession ) {
-                $Reconnect = 1;
+                $Self->{Reconnect} = 1;
                 if ($CMD) {
                     print "$AuthType: Reconnect Session after $MaxPopEmailSession messages...\n";
                 }
@@ -147,9 +160,8 @@ sub Fetch {
             if ( $MessageSize > $MaxEmailSize ) {
                 $Self->{LogObject}->Log(
                     Priority => 'error',
-                    Message =>
-                        "$AuthType: Can't fetch email $NOM from $Param{Login}/$Param{Host}. Email to "
-                        . "big ($MessageSize KB - max $MaxEmailSize KB)!",
+                    Message => "$AuthType: Can't fetch email $NOM from $Param{Login}/$Param{Host}. "
+                        . "Email to big ($MessageSize KB - max $MaxEmailSize KB)!",
                 );
             }
             else {
@@ -205,7 +217,7 @@ sub Fetch {
                 # check limit
                 $Self->{Limit}++;
                 if ( $Self->{Limit} >= $Limit ) {
-                    $Reconnect = 0;
+                    $Self->{Reconnect} = 0;
                     last;
                 }
 
@@ -213,11 +225,6 @@ sub Fetch {
             if ($CMD) {
                 print "\n";
             }
-        }
-    }
-    else {
-        if ($CMD) {
-            print "$AuthType: No messages ($Param{Login}/$Param{Host})\n";
         }
     }
 
@@ -233,10 +240,7 @@ sub Fetch {
         print "$AuthType: Connection to $Param{Host} closed.\n\n";
     }
 
-    # fetch again if still messages on the account
-    if ($Reconnect) {
-        $Self->Fetch(%Param);
-    }
+    # return it everything is done
     return 1;
 }
 
